--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/test_values.yaml
@@ -276,15 +276,15 @@ ConfigSecrets:
 #     key2: abc-2
 
 
-initContainers: []
+initContainers: 
   ## Additional init containers to run before the Scheduler pods.
   ## for example, be used to run a sidecar that chown Logs storage .
-  #- name: volume-mount-hack
-  #  image: busybox
-  #  command: ["sh", "-c", "chown -R 1000:1000 logs"]
-  #  volumeMounts:
+  # - name: volume-mount-hack
+  #   image: busybox
+  #   command: ["sh", "-c", "chown -R 1000:1000 logs"]
+  #   volumeMounts:
   #    - mountPath: /usr/local/airflow/logs
-#      name: logs-data
+  #      name: logs-data
 
 containers: []
   ## Additional init containers to run before the Scheduler pods.
