Added support for behavior in autoscaling hpa

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
@@ -32,3 +32,7 @@ spec:
   {{toYaml $.Values.autoscaling.extraMetrics | indent 4 }}
   {{- end}}
   {{- end }}
+  {{- if $.Values.autoscaling.behavior }}
+  behavior:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
