--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
@@ -75,6 +75,7 @@ ReadinessProbe:
 
 ingress:
   enabled: false
+  ingressClassName: nginx
   annotations:
     nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
@@ -98,6 +99,7 @@ ingress:
 
 ingressInternal:
   enabled: false
+  ingressClassName: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
@@ -182,6 +184,24 @@ autoscaling:
   MaxReplicas: 2
   TargetCPUUtilizationPercentage: 70
   TargetMemoryUtilizationPercentage: 80
+  behavior: {}
+#    scaleDown:
+#      stabilizationWindowSeconds: 300
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#      - type: Pods
+#        value: 4
+#        periodSeconds: 15
+#      selectPolicy: Max
+
   extraMetrics: []
 #    - external:
 #        metricName: pubsub.googleapis.com|subscription|num_undelivered_messages
