--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -26,7 +26,7 @@ spec:
         paths:
           - path: {{ .Values.ingress.path }}
             pathType: Prefix
-            defaultBackend:
+            backend:
               service:
                 name: {{ $svcName }}
                 port:
@@ -77,7 +77,7 @@ spec:
         paths:
           - path: {{ .Values.ingressInternal.path }}
             pathType: Prefix
-            defaultBackend:
+            backend:
               service:
                 name: {{ $svcName }}
                 port:
