Fixed ingress template

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -18,8 +18,8 @@ metadata:
 {{ toYaml .Values.ingress.annotations | indent 4 }}
 {{- end }}
 spec:
+  ingressClassName: {{ $.Values.ingress.ingressClassName }}
   rules:
-  ingressClassName: {{ .Values.ingress.ingressClassName }}
   {{- if or .Values.ingress.host .Values.ingress.path }}
     - host: {{ .Values.ingress.host }}
       http:
@@ -69,8 +69,8 @@ metadata:
 {{ toYaml .Values.ingressInternal.annotations | indent 4 }}
 {{- end }}
 spec:
-  rules:
   ingressClassName: {{ .Values.ingress.ingressClassName }}
+  rules:
   {{- if or .Values.ingressInternal.host .Values.ingressInternal.path }}
     - host: {{ .Values.ingressInternal.host }}
       http:
