Resolved HPA behavior field issue

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
@@ -33,6 +33,6 @@ spec:
     {{- end}}
   {{- if $.Values.autoscaling.behavior }}
   behavior:
-    {{- toYaml . | nindent 4 }}
+    {{- toYaml $.Values.autoscaling.behavior | nindent 4 }}
   {{- end }}
   {{- end }}
