--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -12,7 +12,7 @@
 {{- end }}
 {{- end }}
 ---
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+{{ if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
 {{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
@@ -58,13 +58,14 @@ spec:
               {{- end }}
   {{- end }}
   {{- range .Values.ingress.hosts }}
+    {{ $outer := . -}}
     - host: {{ .host | quote }}
       http:
         paths:
         {{- range .paths }}
           - path: {{ . }}
             {{- if (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: "ImplementationSpecific"
+            pathType: {{ $outer.pathType | quote }}
             {{- end }}
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
@@ -131,13 +132,14 @@ spec:
               {{- end }}
   {{- end }}
   {{- range .Values.ingressInternal.hosts }}
+    {{ $outer := . -}}
     - host: {{ .host | quote }}
       http:
         paths:
         {{- range .paths }}
           - path: {{ . }}
             {{- if (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
-            pathType: "ImplementationSpecific"
+            pathType: {{ $outer.pathType | quote }}
             {{- end }}
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
