--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/test_values.yaml
@@ -170,25 +170,25 @@ ingress:
 #    nginx.ingress.kubernetes.io/canary-weight: "10"
   hosts:
     - host: chart-example1.local
-      pathType: "Prefix"
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.local
-      pathType: "Prefix"
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
   tls: []
 ### Legacy Ingress Format ##
-  host: abc.com
-  path: "/"
-  pathType: "ImplementationSpecific"
+#  host: abc.com
+#  path: "/"
+#  pathType: "ImplementationSpecific"
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
 ingressInternal:
-  enabled: false
+  enabled: true
   className: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
@@ -198,11 +198,11 @@ ingressInternal:
 
   hosts:
     - host: chart-example1.internal
-      pathType: "Prefix"
+      pathType: "ImplementationSpecific"
       paths:
         - /example1
     - host: chart-example2.internal
-      pathType: "Prefix"
+      pathType: "ImplementationSpecific"
       paths:
         - /example2
         - /example2/healthz
