Updated PDB for k8s 1.22 compatibility

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/poddisruptionbudget.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/poddisruptionbudget.yaml
@@ -1,5 +1,9 @@
 {{- if .Values.podDisruptionBudget }}
+{{- if semverCompare ">=1.21-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: policy/v1
+{{- else -}}
+apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include ".Chart.Name .fullname" $ }}
