--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
@@ -153,7 +153,7 @@ prometheusRule:
 
 ingress:
   enabled: false
-  ingressClassName: nginx
+  className: nginx
   annotations: {}
 #    nginx.ingress.kubernetes.io/rewrite-target: /
 #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -179,7 +179,7 @@ ingress:
 
 ingressInternal:
   enabled: false
-  ingressClassName: nginx-internal
+  className: nginx-internal
   annotations: {}
  #    kubernetes.io/ingress.class: nginx
  #    kubernetes.io/tls-acme: "true"
