Updated HPA with backward compatibility

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/hpa.yaml
@@ -1,7 +1,7 @@
 {{- if $.Values.autoscaling.enabled }}
-{{- if semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: autoscaling/v2beta2
-{{- else -}}
+{{- else }}
 apiVersion: autoscaling/v2beta1
 {{- end }}
 kind: HorizontalPodAutoscaler
@@ -19,20 +19,28 @@ spec:
   - type: Resource
     resource:
       name: memory
+      {{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
       target:
         type: Utilization
         averageUtilization: {{ $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
+      {{- else }}
+      targetAverageUtilization: {{ $.Values.autoscaling.TargetMemoryUtilizationPercentage }}
+      {{- end }}
   {{- end }}
   {{- if $.Values.autoscaling.TargetCPUUtilizationPercentage }}
   - type: Resource
     resource:
       name: cpu
+      {{- if semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion }}
       target:
         type: Utilization
         averageUtilization: {{ $.Values.autoscaling.TargetCPUUtilizationPercentage }}
+      {{- else }}
+      targetAverageUtilization: {{ $.Values.autoscaling.TargetCPUUtilizationPercentage }}
+      {{- end }}
   {{- end }}
-    {{- if $.Values.autoscaling.extraMetrics }}
-  {{toYaml $.Values.autoscaling.extraMetrics | indent 4 }}
+    {{- if and $.Values.autoscaling.extraMetrics (semverCompare ">=1.16-0" .Capabilities.KubeVersion.GitVersion) }}
+  {{- toYaml $.Values.autoscaling.extraMetrics | nindent 2 }}
     {{- end}}
   {{- if and $.Values.autoscaling.behavior (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   behavior:
