Updated envoy repo to quay
- Updated envoy repo to quay to avoid dockerhub pull rate limit issue

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/app-values.yaml
@@ -228,7 +228,7 @@ servicemonitor:
   additionalLabels: {}
 
 envoyproxy:
-  image: envoyproxy/envoy:v1.14.1
+  image: quay.io/devtron/envoy:v1.14.1
   configMapName: ""
   resources:
     limits:
