--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
@@ -355,7 +355,7 @@ rawYaml: []
 #    type: ClusterIP
 
 envoyproxy:
- image: envoyproxy/envoy:v1.14.1
+ image: quay.io/devtron/envoy:v1.14.1
  configMapName: ""
  resources:
    limits:
